[package]
name = "gtav-race-gen-2-electric-boogaloo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
egui-macroquad = "0.15"
arboard = { version = "3.4.0", features = ["wayland-data-control"] }
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
